# multi-llm-chat

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TODO_PROVIDER_MIGRATION.md  app.py  chat_logic.py  main.py  pyproject.toml  review_result.json
.gemini/: GEMINI.md
.github/ISSUE_TEMPLATE/: epic.md  story.md  task.md
.github/agents/: japanese-cli.md
.github/workflows/: ci.yml
.serena/: project.yml
doc/: README.md  architecture.md  ci_lint_spec.md  context_compression_requirements.md  core_split_dependencies.md  core_split_metrics.md  core_split_plan.md  deprecation_policy.md  development_workflow.md  feature_list.md  glossary.md  gradio_ui_design.md  history_feature_requirements.md  llm_switching_feature_spec.md  mcp_filesystem_guide.md  provider_specific_system_prompt_spec.md  refactoring_metrics.md  structured_content_format_spec.md  system_prompt_feature_requirements.md  webui_2pane_design_spec.md  webui_history_management_spec.md
doc/architecture/: core_layer.md  infrastructure_layer.md  service_layer.md  ui_layer.md
doc/archive/: development_ideas.md  spec_v0.1.md
doc/backlog/: context_compression_requirements.md  llm_hands_up_spec.md
doc/refactoring/: core_split_metrics.md  core_split_plan.md  refactoring_dependencies.md
hooks/: install.sh  pre-commit  pre-push
issues/: 001-multi-llm-cli-development.md  002-epic-gradio-ui.md  003-epic-core-refactor-system-prompt.md  004-epic-context-compression.md  005-epic-history-management.md  007-task-ci-lint-workflow.md  008-task-tdd-workflow-prompts.md  009-task-sequential-core-system-prompt.md  010-task-parallel-context-history.md  011-epic-llm-switching-feature.md  011-future-refactoring-context-compression.md  012-epic-provider-specific-system-prompt.md  013-task-chat-history-reset.md  016-future-refactoring-context-compression.md  80_chatgpt_tools_design.md  80_design_summary.md  81_agentic_loop_design.md  81_design_summary.md  81_progress_tracking.md  81_redesign_summary.md  81_redesign_task_breakdown.md  refactoring-webui-respond.md  task_ticket_guidelines.md
tests/: conftest.py  conftest_llm.py  test_agentic_loop.py  test_agentic_loop_immutability.py  test_chat_logic.py  test_chat_service.py  test_chatgpt_tools.py  test_cli.py  test_compression.py  test_concurrent_safety.py  test_config.py  test_context_compression.py  test_core.py  test_core_facade.py  test_core_legacy_api.py  test_core_public_api.py  test_core_token_context.py  test_entry_points.py  test_filesystem_server.py  test_gemini_adapter.py  test_gemini_client.py  test_gemini_tools.py  test_history_store.py  test_history_utils.py  test_llm_provider.py  test_llm_provider_gemini.py  test_llm_provider_gemini_new.py  test_llm_provider_openai.py  test_main.py  test_mcp_client.py  test_mcp_e2e.py  test_mcp_integration.py  test_mcp_llm_integration.py  test_runtime.py  test_server_manager.py  test_token_utils.py  test_validation_utils.py  test_webui.py  test_webui_app.py
(+65 files in other folders)
